[package]
name = "youtube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phosphorus_core = { path = "../../phosphorus_core" }
reqwest = "0.11.11"
async-trait = "0.1.57"
regex = "1.6.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
